--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,20 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	// dotenv-java (.env 파일 로드)
+	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
+	// Docker Java API - OkHttp transport
+	implementation 'com.github.docker-java:docker-java:3.3.4'
+	implementation 'com.github.docker-java:docker-java-transport-okhttp:3.3.4'
+	// JWT (토큰 생성/검증)
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 }
 
 tasks.named('test') {
