refactor: 리뷰 반영

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,4 +18,4 @@ server:
 # 로그 레벨
 logging:
   level:
-    com.agent.monito.util.JwtUtil: DEBUG
+    com.agent.monito.util.com.agent.monito.global.util.JwtUtil: DEBUG
